# ai_robot_oa

autonomous_exploration_development_environment/: README.md
autonomous_exploration_development_environment/src/local_planner/launch/: local_planner.launch
autonomous_exploration_development_environment/src/local_planner/src/: localPlanner.cpp
autonomous_exploration_development_environment/src/terrain_analysis/src/: terrainAnalysis.cpp
autonomous_exploration_development_environment/src/vehicle_simulator/launch/: ai_robot_sim_local_planner.launch
autonomous_exploration_development_environment/src/vehicle_simulator/log/: metrics_2023-11-17-17-2-23.txt  metrics_2023-11-21-17-17-19.txt  metrics_2023-11-21-22-44-33.txt  metrics_2023-11-23-16-10-31.txt  metrics_2023-11-23-16-37-38.txt  metrics_2023-11-23-17-1-28.txt  metrics_2023-11-28-10-23-32.txt  metrics_2023-11-28-9-53-11.txt  metrics_2023-11-29-14-58-18.txt  metrics_2023-12-14-20-21-47.txt  metrics_2023-12-25-15-46-45.txt  metrics_2023-12-25-20-58-1.txt  metrics_2023-12-25-21-13-29.txt  metrics_2023-12-25-21-24-36.txt  trajectory_2023-11-17-17-2-23.txt  trajectory_2023-11-21-17-17-19.txt  trajectory_2023-11-21-22-44-33.txt  trajectory_2023-11-23-16-10-31.txt  trajectory_2023-11-23-16-37-38.txt  trajectory_2023-11-23-17-1-28.txt  trajectory_2023-11-28-10-23-32.txt  trajectory_2023-11-28-9-53-11.txt  trajectory_2023-11-29-14-58-18.txt  trajectory_2023-12-14-20-21-47.txt  trajectory_2023-12-24-16-59-10.txt  trajectory_2023-12-25-15-46-45.txt  trajectory_2023-12-25-20-58-1.txt  trajectory_2023-12-25-21-13-29.txt  trajectory_2023-12-25-21-24-36.txt
neo_ai_robot/: readme.md
neo_ai_robot/ai_robot_core/: CMakeLists.txt  README.md  package.xml  setup.py
neo_ai_robot/ai_robot_core/config/: oa.yaml  params_hokuyo.yaml  simple_local_planner.yaml
neo_ai_robot/ai_robot_core/config/rviz/: test.rviz
neo_ai_robot/ai_robot_core/launch/: test.launch  test_cloudplanner.launch  test_movebase_client.launch  test_movebase_node.launch  test_odom2map_tf.launch  test_sim.launch  test_sim_oa.launch
neo_ai_robot/ai_robot_core/map/: default.pgm  default.yaml
neo_ai_robot/ai_robot_core/nodes/: oa_sim_noros  run_oa
neo_ai_robot/ai_robot_core/src/: apf_local_planner.h  base_control.cpp  base_control.h  bluetooth.cpp  bluetooth.h  brain.cpp  brain.h  brain_node.cpp  cloudplanner.cpp  cloudplanner.h  falco_local_planner.cpp  falco_local_planner.h  globals.cpp  globals.h  local_planner_limits.h  man_control.cpp  man_control.h  mapinfo.h  movebase.cpp  movebase.h  movebase_client.cpp  movebase_client.h  movebase_client_node.cpp  movebase_node.cpp  obstacle_avoid.cpp  obstacle_avoid.h  octree.h  odom2map_tf_pub.cpp  simple_local_planner.cpp  simple_local_planner.h  util.cpp  util.h
neo_ai_robot/ai_robot_core/src/oa_impl/: __init__.py  geo_tools.py  main.py  map_tools.py  robo_ctrl.py  robo_ctrl_ros.py  robo_env_sim.py  sim.py  vmap_sim.py
neo_ai_robot/ai_robot_core/src/oa_impl/Lidar/: 机器人激光雷达数据格式说明.md  激光雷达扫描数据采样说明.txt
neo_ai_robot/ai_robot_core/src/test/: test_cloudplanner.cpp  test_merca2plane.cpp  test_websocket.cpp
neo_ai_robot/ai_robot_core/src/websocket/: client.cpp  client.h
neo_ai_robot/ai_robot_core/urdf/: pioneer3at.urdf
neo_ai_robot/ai_robot_msgs/: CMakeLists.txt  package.xml
neo_ai_robot/ai_robot_msgs/msg/: OAVelocity.msg
ranger_sim/launch/: ai_robot_ranger_gazebo.launch  mycar.launch  mycargazeboO.launch
ranger_sim/ranger_mini/: CMakeLists.txt  package.xml
ranger_sim/ranger_mini/config/: joint_names_ranger_mini.yaml
ranger_sim/ranger_mini/meshes/: base_scan.STL  ffl_wheel_link.STL  ffr_wheel_link.STL  front_left_steering_link.STL  front_right_steering_Link.STL  kinect_Link.STL  rear_left_steering_link.STL  rear_right_steering_link.STL  rfr_wheel_link.STL  tof_Link.STL
ranger_sim/ranger_mini/urdf/: ranger_mini.csv
ranger_sim/ranger_mini_control/: package.xml
ranger_sim/ranger_mini_control/config/: controller.yaml
ranger_sim/ranger_mini_control/launch/: commander.launch  robot_control.launch
ranger_sim/ranger_mini_control/scripts/: pub_command.py
ranger_sim/ranger_mini_gazebo/: CMakeLists.txt  package.xml
ranger_sim/ranger_mini_gazebo/description/meshes/livox_mid360/: livox_mid360.dae
ranger_sim/ranger_mini_gazebo/description/urdf/: display-xacro-with-joint-state-gui.launch  display-xacro.launch
ranger_sim/ranger_mini_gazebo/launch/: ai_robot_ranger_mini.launch  ranger_mini_empty_world.launch  ranger_mini_rviz.launch
ranger_sim/ranger_mini_gazebo/worlds/: batclab.world  batclab_2.world
ranger_sim/ranger_mini_gazebo/xacro/: Lite3V.urdf  livox_mid360.xacro  materials.xacro  pioneer3at.urdf  ranger_mini.gazebo.xacro  ranger_mini_sensors.xacro  ranger_mini_sensors_CPU.xacro  zed2.xacro
