<?xml version="1.0"?>
<package format="2">
  <name>ai_robot_core</name>
  <version>0.1.0</version>
  <description>The core package for ai_robot.</description>
  <author email="xmj@sjtu.edu.cn">Minjie Xu</author>
  <maintainer email="xmj@sjtu.edu.cn">Minjie Xu</maintainer>
  <license>TODO</license>
  <url type="website">https://bat.sjtu.edu.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>ai_robot_msgs</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libwebsocketpp-dev</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>laser_geometry</build_depend>

  <!-- <exec_depend>ai_robot_msgs</exec_depend> -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>libwebsocketpp-dev</exec_depend>
  <exec_depend>laser_geometry</exec_depend>

  <build_export_depend>ai_robot_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <export></export>
</package>
