<package format="2">
  <name>ranger_mini</name>
  <version>0.1.0</version>
  <description>ranger_mini model and simulation.</description>
  <author>cx</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
</package>
