<?xml version="1.0"?>
<package format="2">
  <name>ranger_mini_gazebo</name>
  <version>0.1.0</version>
  <description>The ranger_mini_gazebo package.</description>
  <maintainer email="zsq@todo.todo">zsq</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
